# LearnedStaticFunction

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  DockerfilePaperTest  Learned retrieval evaluation.ipynb  README.md  Train.ipynb  arXiv category prediction.ipynb  csf_and_lsf.sh  filter_tuner.cpp  main.cpp  plot_model_calibration.cpp  ribbon_huffman.cpp  ribbon_huffman_novlr.cpp  ribbon_learned.cpp  ribbon_learned_bench.cpp  ribbon_learned_filtered.cpp  ribbon_learned_novlr.cpp  run_all_lsf.sh
csf/: Dockerfile  README.md  benchmark.cpp  initDocker.sh  run.sh  run_csf.sh
include/learnedretrieval/: bits.hpp  dataset_reader.hpp  filter_coding.hpp  huffman.hpp  learned_retrieval.hpp  learned_static_function.hpp  model_freq.hpp  model_gauss.hpp  model_wrapper.hpp  shannon.hpp  tree_huffman.hpp
include/lsf/: bits.hpp  dataset_gauss.hpp  filter_coding.hpp  learned_static_function.hpp  model_freq.hpp  model_gauss.hpp  model_wrapper.hpp
paper/: main.tex  pgf_header.tex  unicode.tex
paper/fig/: buildPlots.sh  dataSetOverview.tex  filterEff.tex  fullDsPerformance.tex  modelPerformance.tex
train/: requirements.txt  run_train.sh  train.py
